rename scss folder to styles folder and update style gulp task to combine css files

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.12.8",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-concat-css": "^3.1.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-modernizr": "^1.0.0-alpha",
@@ -34,6 +35,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.28",
     "gulp-watch": "^4.3.5",
+    "postcss-cssnext": "^3.1.0",
     "postcss-hexrgba": "^0.2.0",
     "postcss-import": "^8.0.2",
     "postcss-mixins": "^4.0.2",
