--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-font2css": "^0.1.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^6.1.1",
