--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-site",
   "version": "1.0.0",
   "dependencies": {
+    "animejs": "^2.2.0",
     "barba.js": "^1.0.0",
     "jquery": "^2.2.4",
     "jquery-smooth-scroll": "^2.2.0",
